--- a/templates/index.html
+++ b/templates/index.html
@@ -2,51 +2,35 @@
 <html>
   <head>
     <title>Ashik Website</title>
-    <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal; 
-        color: rgb(50,50,50);
-        text-align: center; 
-      }
-      #banner {
-        width: 100%;
-        height: 360px; 
-        object-fit: cover;
-      }
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100,100,100);
-        text-align: center;
-        font-weight: normal;
-      }
-      .bodytext {
-        font-family: Roboto;
-        font: size; 12px;
-        color: rgb(80,80,80)
-    
-      }
-      #container {
-        max-width: 720px;
-        margin: 0 auto;
-      }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <div id="container">
-      <h1>My first web page</h1>
-      <img id="banner" src="https://6c03a2d2-c5a1-4650-aef6-f869efa0bd62-00-1gxoczlv45f6q.sisko.replit.dev:8080/static/banner.jpeg.jpg">
-      <h2>About Website</h2>
-      <p class="bodytext">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">My first web page</h1>
+      <img class="img-fluid" id="banner" src="https://6c03a2d2-c5a1-4650-aef6-f869efa0bd62-00-1gxoczlv45f6q.sisko.replit.dev:8080/static/banner.jpeg.jpg">
+      <style>
+        #banner {
+          height: 360px;
+          width: 100%;
+          object-fit: cover;
+        }
+      </style>
+      <h2 class="text-center mt-2 mb-4">About Website</h2>
+      <p class="lead">
+        It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it. Do not be angry with the pain in the reprimand in the pleasure he wants to be a hair from the pain in the hope that there is no breeding. Unless they are blinded by lust, they do not come forth; they are in fault who abandon their duties and soften their hearts, that is, their labors.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodytext">TODO-show something later</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include "jobitem.html" %}
+        {% endfor %}
+      </div>
+    
       <div style="text-align:center;">
-      <button>Contact Us</button>
-        <p>Copyright 2024, Ashik</p>
+      <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">Copyright 2024, Ashik</p>
       </div>
     </div>
   </body>
