--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
+    {% include 'nav.html' %}
+     <img class="img-fluid" id="banner" src="https://6c03a2d2-c5a1-4650-aef6-f869efa0bd62-00-1gxoczlv45f6q.sisko.replit.dev:8080/static/banner.jpeg.jpg">
     <div class="container">
       <h1 class="text-center mt-2 mb-4">My first web page</h1>
-      <img class="img-fluid" id="banner" src="https://6c03a2d2-c5a1-4650-aef6-f869efa0bd62-00-1gxoczlv45f6q.sisko.replit.dev:8080/static/banner.jpeg.jpg">
       <style>
         #banner {
           height: 360px;
           width: 100%;
           object-fit: cover;
+          margin-bottom: 16px;
         }
       </style>
-      <h2 class="text-center mt-2 mb-4">About Website</h2>
+      <div class="row " style="margin-bttom:16px;">
+        <div class="col-md-6">
       <p class="lead">
         It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain. For to come to the smallest detail, no one should practice any kind of work unless he derives some benefit from it. Do not be angry with the pain in the reprimand in the pleasure he wants to be a hair from the pain in the hope that there is no breeding. Unless they are blinded by lust, they do not come forth; they are in fault who abandon their duties and soften their hearts, that is, their labors.
       </p>
+          </div>
+        <div class="d-none d-md-block col-md-6">
+        <img src="/static/banner2.jpg" style="height:320px; border-radius:4px;">
+        </div>
+      </div>
       <h2 class="text-center mt-2 mb-4">Open Positions</h2>
       <div>
         {% for job in jobs %}
@@ -33,5 +41,6 @@
         <p class="mt-4">Copyright 2024, Ashik</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
