--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -6,6 +6,6 @@
     <div><b>Location:</b> {{job['location']}}</div>
   </div>
   <div class="col-2">
-    <a href="mailto:ashikorrahman@gmail.com?subject=Application for {{job['title']}}" type="button" class="btn btn-outline-primary">Apply</a>
+    <a href="mailto:ashikorrahman8900@gamil.com?subject=Application%20for%20{{job[title]}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0AYour%20resume%20link%3A%20%3Clink%3E%0D%0AYour%20social%20link%3A%20%3Clink%3E" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
