--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,14 @@
 <html>
   <head>
     <title>Ashik Website</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% include 'botstrap.html' %}
   </head>
   <body>
     {% include 'nav.html' %}
-     <img class="img-fluid" id="banner" src="https://6c03a2d2-c5a1-4650-aef6-f869efa0bd62-00-1gxoczlv45f6q.sisko.replit.dev:8080/static/banner.jpeg.jpg">
+    {% include 'banner.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">My first web page</h1>
-      <style>
-        #banner {
-          height: 360px;
-          width: 100%;
-          object-fit: cover;
-          margin-bottom: 16px;
-        }
-      </style>
+      
       <div class="row " style="margin-bttom:16px;">
         <div class="col-md-6">
       <p class="lead">
